@@ -29,24 +29,20 @@ EDELIB_NS_BEGIN
  * \class MimeType
  * \brief Mime handling class
  *
- * MimeType will handle file types according to specification
- * at http://www.freedesktop.org. This class depends on
- * <em>shared-mime-info</em> package, usually shipped with todays
- * distributions.
+ * MimeType will handle file types according to specification at http://www.freedesktop.org. This class 
+ * depends on <em>shared-mime-info</em> package, usually shipped with todays distributions.
  *
  * It will try to recognize given file looking into $XDG_DATA_DIRS/mime/magic
- * database, consulting $XDG_DATA_DIRS/mime/aliases for potential type
- * aliasing.
+ * database, consulting $XDG_DATA_DIRS/mime/aliases for potential type * aliasing.
  *
- * Returned values from type() will be in form context/file-type, so for
- * example, for given file foo.tar.gz will be <em>application/x-compressed-tar</em>
- * or for baz.jpg will be <em>image/jpeg</em>.
+ * Returned values from type() will be in the form <em>context/file-type</em>, so, for example, for given 
+ * file foo.tar.gz will be <em>application/x-compressed-tar</em> or for baz.jpg will be <em>image/jpeg</em>.
  *
- * If file could not be recognized, returned string will be: <em>application/octet-stream</em>.
+ * If file could not be recognized, returned string will be <em>application/octet-stream</em>.
  *
- * comment() will return full description for recognized file, looking inside
- * $XDG_DATA_DIRS/mime/context/file-type.xml file. This description can be
- * plain english (default) or localized (not implemented yet).
+ * comment() will return full description for recognized file, looking inside 
+ * $XDG_DATA_DIRS/mime/context/file-type.xml file. This description can be plain english (default) or 
+ * localized (not implemented yet).
  *
  * \todo add locale during read of comments
  * \todo  Last change in xdgmime.c moved stat-ed code to be executed first so ambiguous directory names
@@ -69,8 +65,7 @@ public:
 	~MimeType();
 
 	/**
-	 * Set path to the file for inspection. If file does not
-	 * exists or is unreadable, it will return false.
+	 * Set path to the file for inspection. If file does not exists or is unreadable, it will return false.
 	 *
 	 * \return true if manage to access file, otherwise false
 	 * \param filename is full path to file
@@ -78,8 +73,7 @@ public:
 	bool set(const char* filename);
 
 	/** 
-	 * Return context/file-type form for file, given with set().
-	 * If set() failed, it will return empty string.
+	 * Return context/file-type form for file, given with set(). If set() failed, it will return empty string.
 	 */
 	const String& type(void) const;
 
@@ -90,19 +84,25 @@ public:
 	const String& comment(void);
 
 	/**
-	 * Returns true if current mime type is subclass of given parameter name,
-	 * or false if not.
+	 * Returns true if current mime type is subclass of given parameter name.
 	 */
 	bool subclass_of(const char* mime);
 
 	/**
-	 * Return the name of potential icon, using name according to freedesktop.org
-	 * icon name specification. It will <b>not</b> return file with extension
-	 * since further those could be explicitely choosed, <b>nor</b> will return
-	 * full path for icons or check if file exists.
+	 * Try to guess the name of possible icon (the name can be used for edelib::IconLoader and edelib::IconTheme).
+	 * Generally the icon used for a mimetype is created based on the mime-type by mapping "/" characters to "-", but 
+	 * it can overriden by writing entry in <em>icons</em> file. This file will be searched in user_data_dir()
+	 * and system_data_dirs() directories.
 	 *
-	 * Icon name will be in form: if mime type is image/jpeg, icon will be image-jpeg;
-	 * the same will be for eg. application/x-tek-pk, icon name will be application-x-tek-pk.
+	 * icons file looks like:
+	 * \code
+	 *  # this is comment
+	 *  text/plain:icon-name
+	 *  application/octet-stream:another-icon
+	 *
+	 *  # this is bad and will not be read
+	 *  application/octet-stream : icon
+	 * \endcode
 	 *
 	 * \note This rule does not applies for <em>node/xxx</em> (where xxx is folder,socket,fifo, etc.).
 	 *       According to the icon naming specs, icon names should be file,socket,folder,...
