@@ -2,7 +2,7 @@
  * $Id$
  *
  * Window class
- * Copyright (c) 2005-2007 edelib authors
+ * Copyright (c) 2005-2009 edelib authors
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
